# FoodDeliveryScraping

./: .env.example  .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analytics/: coverage_report.py  data_quality.py  duckdb_views.sql
config/: markets.yaml  platforms.yaml  prometheus.yml
config/grafana/dashboards/: coverage-intel.json  dq-metrics.json
config/grafana/provisioning/dashboards/: dashboard.yml
config/grafana/provisioning/datasources/: datasource.yml
dags/: resolve_entities.py  scrape_doordash.py  scrape_grubhub.py  scrape_justeattakeaway.py  scrape_ubereats.py  snapshot_merchant_counts.py
docs/: demo_scraping.webm  demo_services.webm
examples/: explore_jet_html.py  run_detail_scrape.py  run_matching_simple.py  run_optimized_extraction.py  run_resolve_entities.py
processing/: entity_resolution.py  models.py  normalizer.py  parser.py
scrapers/: base.py
scrapers/doordash/: detail.py  listing.py
scrapers/grubhub/: detail.py  listing.py
scrapers/justeattakeaway/: listing.py
scrapers/ubereats/: listing.py
scrapers/utils/: proxy.py  stealth.py
scripts/: process_and_report.py  run_local_justeattakeaway.py  run_local_ubereats.py
storage/: db.py  init_db.sql  minio_client.py
storage/migrations/: 001_platform_merchant_daily_counts.sql
streaming/: __init__.py  parser_consumer.py  producer.py
tests/: conftest.py  test_data_quality.py  test_entity_resolution.py  test_parser.py  test_parser_justeattakeaway.py  test_parser_ubereats.py
